--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "twilio": "^4.23.0",
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
     "@shopify/api-codegen-preset": "^1.2.0",
