feat: Rename "Premium Shipping" to "Verified Delivery" across the application and implement mobile responsiveness for UI components.

--- a/shopify.app.smusic.toml
+++ b/shopify.app.smusic.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "45cc130ef59cbeaf9133acea201981ed"
-name = "ink. Shipping"
+name = "ink. Verified Delivery"
 application_url = "https://shopify-app-250065525755.us-central1.run.app"
 embedded = true
 
@@ -10,7 +10,7 @@ api_version = "2025-10"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_assigned_fulfillment_orders,read_customers,read_files,read_fulfillments,read_metaobjects,read_online_store_pages,read_orders,write_assigned_fulfillment_orders,write_files,write_fulfillments,write_metaobjects,write_online_store_pages,write_orders,write_themes"
+scopes = "read_assigned_fulfillment_orders,write_assigned_fulfillment_orders,read_customers,read_files,write_files,read_fulfillments,write_fulfillments,read_metaobjects,write_metaobjects,read_online_store_pages,write_online_store_pages,read_orders,write_orders,write_themes"
 optional_scopes = [ ]
 use_legacy_install_flow = false
 
